--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "pdf-parse": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone-uploader": "^2.11.0",
     "react-pdf": "^7.5.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
